kubernetes/monitoring/prometheus/prometheus-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
  namespace: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      securityContext:
        runAsUser: 10000
        runAsNonRoot: true
        runAsGroup: 10001
        fsGroup: 10001
      containers:
      - name: prometheus
        image: localhost:5000/prometheus:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 9090
          protocol: TCP
        resources:
          requests:
            memory: "500Mi"
            cpu: "200m"
          limits:
            memory: "750Mi"
            cpu: "250m"
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /status
            port: http
          initialDelaySeconds: 10
          periodSeconds: 3
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 9090
          timeoutSeconds: 1
