kubernetes/monitoring/prometheus/prometheus-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: grafana
spec:
  ports:
  - port: 9090
    targetPort: 9090
  selector:
    app: prometheus
  type: LoadBalancer
